Use NetworkContext to queue reports.

Bug: 903948
Change-Id: Ida8e955b212f26c9938a43cb196d9f90aac3404b
Reviewed-on: https://chromium-review.googlesource.com/c/1351098
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612271}
Former-commit-id: 218c5ce59314b0d17c45c37207640af0975ea3ba