content/browser/net/reporting_service_proxy.h
@@ -9,10 +9,10 @@
 
 namespace content {
 
-class StoragePartition;
-
+// Binds a mojom::ReportingServiceProxy to |request| that queues reports using
+// |render_process_id|'s NetworkContext. This must be called on the UI thread.
 void CreateReportingServiceProxy(
-    StoragePartition* storage_partition,
+    int render_process_id,
     blink::mojom::ReportingServiceProxyRequest request);
 
 }  // namespace content
